--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_DADATA_TOKEN='fe6af289dbac08cf0f6cefaf75937b1727eaea69'
-VITE_API_URL='https://lk2.dengimigom.ru/api/bankrotMonolitForm'
+VITE_API_URL='https://lk2.dengimigom.ru/api/bankrot/form'
